2008-08-20  Mike Voorhees <vernish13@gmail.com>

	* Patch from Mike Voorhees to fix various problems with
	g_utf8_validate compared to the glib implementation and unit tests
	to ensure that there are no regressions.

	From a mailing list post to mono-devel-list on August 19th, 2008

	[Mono-dev] utf8 related patches. Please review.

2008-08-20  Mike Voorhees  <vernish13@gmail.com>

	* src/glib.h : Adding declarations for g_utf8_strlen, g_utf8_get_char,
	and g_utf8_next_char.

	* src/gunicode.c : Adding implementation for g_utf8_strlen, g_utf8_get_char,
	and g_utf8_next_char.

	* src/gunicode.c : Rewrote g_utf8_validate.

	* test/utf8.c Adding tests for g_utf8_strlen, g_utf8_get_char,
	g_utf8_next_char, and g_utf8_validate.

	Contributed under MIT/X11 license.
	
2008-08-05  Andreas Faerber  <andreas.faerber@web.de>

	* autogen.sh: Suppress arguments warning for NOCONFIGURE.
	
	Contributed under MIT/X11 license.

2008-08-04  Bill Holmes  <billholmes54@gmail.com>

	* test/tests.h, test/Makefile.am, test/memory.c : Adding memory tests to test
	  allocation routines return NULL when 0 size is passed in.

	Contributed under MIT/X11 license.

2008-08-04  Bill Holmes  <billholmes54@gmail.com>

	* src/glib.h : Changing the allocation routines to return null if 0 size is
	  passed in.

	Contributed under MIT/X11 license.

2008-06-16  Zoltan Varga  <vargaz@gmail.com>

	* src/vasprintf.c (vasprintf): Applied patch from Michail Ushakov 
	<migelU@gmail.com>. Workaround broken vsnprintf on windows. Fixes
	#400445.

2008-06-11  Zoltan Varga  <vargaz@gmail.com>

	* src/goutput.c (g_log): Remove unnecessary and incorrect call to 
	g_strdup_printf (). Fixes #398918.

2008-05-01  Bill Holmes  <billholmes54@gmail.com>

	* src/glib.h : Adding declarations for g_ucs4_to_utf16 and g_utf16_to_ucs4.

	* src/gutf8.c : Adding implementation for g_ucs4_to_utf16 and g_utf16_to_ucs4.

	* test/utf8.c Adding tests for g_ucs4_to_utf16 and g_utf16_to_ucs4.

	Contributed under MIT/X11 license.
